# Course-Project-TestControl

./: README.md
ReleaseTestControl/TestControl/alltests/Зачет по БЖЧ/: Зачет по БЖЧ.txt
ReleaseTestControl/TestControl/alltests/Как не потерять рассудок, учась на ВМСИС/: Как не потерять рассудок, учась на ВМСИС.txt
ReleaseTestControl/TestControl/alltests/Отчисление/: Отчисление.txt
ReleaseTestControl/TestControl/alltests/ПДД Жесты регулировщика/: ПДД Жесты регулировщика.txt
ReleaseTestControl/TestControl/alltests/Тест на твич стримера/: Тест на твич стримера.txt
ReleaseTestControl/TestControl/alltests/Экзамен по философии/: Экзамен по философии.txt
TestControl/: CMakeLists.txt  accounts_data.txt  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  creatingtestform.cpp  creatingtestform.h  creatingtestform.ui  dialogforcreatingform.cpp  dialogforcreatingform.h  horizontalscrollarea.h  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui  qrightclickbutton.cpp  qrightclickbutton.h  readqfile.cpp  readqfile.h  testwidget.cpp  testwidget.h  testwidget.ui
TestControl/alltests/vanya/: vanya.txt
build-TestControl-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-TestControl-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/.qt/: QtDeploySupport.cmake
build-TestControl-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/TestControl_autogen/: deps  mocs_compilation.cpp
build-TestControl-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/TestControl_autogen/EWIEGA46WW/: moc_aspectratiopixmaplabel.cpp  moc_aspectratiopixmaplabel.cpp.d  moc_creatingtestform.cpp  moc_creatingtestform.cpp.d  moc_dialogforcreatingform.cpp  moc_dialogforcreatingform.cpp.d  moc_menuwindow.cpp  moc_menuwindow.cpp.d  moc_qrightclickbutton.cpp  moc_qrightclickbutton.cpp.d  moc_testwidget.cpp  moc_testwidget.cpp.d
build-TestControl-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/TestControl_autogen/include/: ui_creatingtestform.h  ui_menuwindow.h  ui_testwidget.h
Пояснительная записка/Записка и все приложения к ней/: Пояснительная записка.docx  Приложение А. Листинг кода.docx
Пояснительная записка/Прочие файлы для редактирования/: A4(слои).dwg  A4(слои).dwt  Алгоритм по шагам 1 с рамкой.bak  Алгоритм по шагам 1 с рамкой.dwg  Алгоритм по шагам 2 с рамкой.bak  Алгоритм по шагам 2 с рамкой.dwg  Блок-схема алгоритма по шагам 1.drawio  Блок-схема алгоритма по шагам 2.drawio  Ведомость документов (шаблон).dwt  Ведомость документов.bak  Ведомость документов.dwg  Ведомость документов.dwl  Ведомость документов.dwl2  Диаграмма Классов.simp  Диаграмма Классов.simp.bak  Диаграмма классов с рамкой.bak  Диаграмма классов с рамкой.dwg  Пояснительная записка.docx
(+8 files in other folders)
